--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,577 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'NexaBold';
+  src: url('./Fonts/NexaBold.ttf.woff') format('woff'),
+    url('./Fonts/NexaBold.ttf.svg#NexaBold') format('svg'),
+    url('./Fonts/NexaBold.ttf.eot'),
+    url('./Fonts/NexaBold.ttf.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: 'NexaLight';
+  src: url('./Fonts/NexaLight.ttf.woff') format('woff'),
+    url('./Fonts/NexaLight.ttf.svg#NexaLight') format('svg'),
+    url('./Fonts/NexaLight.ttf.eot'),
+    url('./Fonts/NexaLight.ttf.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html,
+body {
+  font-family: 'NexaBold';
+}
+a {
+  text-decoration: none;
+}
+button {
+  border: none !important;
+  outline: none !important;
+  /* background-color: #101010; */
+  color: white;
+  font-size: 18px;
+  font-family: 'NexaBold';
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  width: 100vw;
+  height: 70px;
+  background-color: #101010;
+  color: white;
   display: flex;
+  justify-content: space-between;
+  position: fixed;
+  z-index: 1;
+}
+
+.menu {
+  margin-left: 35px;
+  padding-top: 20px;
+  font-size: 18px;
+}
+
+.menu button {
+  border: none !important;
+  outline: none !important;
+  background-color: #101010;
+  color: white;
+  font-size: 18px;
+  font-family: 'NexaBold';
+  margin-right: 30px;
+  opacity: 0.5;
+  padding: 4px 6px;
+}
+
+.menu-active {
+  opacity: 1 !important;
+}
+.menu-btns {
+  margin-right: 35px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.menu-btns button {
+  opacity: 1;
+}
+
+.menu-btns button:nth-child(1) {
+  background-color: white;
+  color: black;
+  padding: 0px 25px;
+  border-radius: 3px;
+  /* margin-top: 12px; */
+  padding-top: 15px;
+  padding-bottom: 12px;
+  margin-right: 12px;
+}
+
+.menu-btns button:nth-child(2) {
+  background-color: #87bba2;
+  color: black;
+  padding: 0px 25px;
+  border-radius: 3px;
+  /* margin-top: 12px; */
+  padding-top: 15px;
+  padding-bottom: 12px;
+  margin-right: 30px;
+}
+
+.menu-btns img {
+  /* padding-top: 20px; */
+}
+
+.block-video {
+  width: 100vw;
+  height: 100vh;
+  background-color: #101010;
+}
+
+.video {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  padding: 0px 10px;
+  padding-top: 70px;
+  padding-bottom: 10px;
+}
+
+.round-block {
+  width: 100%;
+  height: 100%;
+  background-color: #13281a;
+  border-radius: 10px;
+  display: flex;
+  color: white;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.main-text,
+.small-text {
+  width: 60%;
+  text-align: center;
+}
+.main-text {
+  font-size: 68px;
+  margin-bottom: 56px;
+}
+
+.med-text {
+  color: white;
+  font-size: 45px;
+  /* width: 60%; */
+  text-align: center;
+}
+
+.small-text {
+  font-family: 'NexaLight';
+  font-size: 22px;
+}
+
+.what-is {
+  display: flex;
+  width: 100vw;
+  flex-direction: column;
+}
+
+.what-is1 {
+  width: 100%;
+  height: 600px;
+  background: url(./Images/background.png);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.what-is2 {
+  width: 100%;
+  background-color: #27513d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.what-is3 {
+  width: 100%;
+  height: 700px;
+  background: url(./Images/background2.png);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.features {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 65px;
+}
+
+.feature {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+}
+
+.feature img {
+  width: 45px;
+  margin-bottom: 30px;
+}
+
+.feature-main-text {
+  font-size: 20px;
+  margin-bottom: 18px;
+}
+
+.feature-text {
+  font-size: 16px;
+}
+
+.main-text-left {
+  width: 80%;
+  font-size: 64px;
+  padding-top: 105px;
+  margin-bottom: 85px;
+}
+
+.usage {
+  background-color: #171717;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.usage-main-text {
+  color: white;
+  font-size: 45px;
+  padding-top: 85px;
+  margin-bottom: 115px;
+}
+
+.usage-main-text span {
+  color: #00ae5b;
+}
+
+.usage-options {
+  width: 90%;
+}
+.usage-option {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  text-align: center;
+  align-items: center;
+  color: white;
+  float: left;
+  margin: 0px 2.5%;
+  margin-bottom: 40px;
+  height: 140px;
+}
+.usage-option img {
+  /* width: 40%; */
+  height: 80px;
+  margin-bottom: 20px;
+}
+
+.mission {
+  display: flex;
+  flex-direction: column;
+}
+.mission-img {
+  width: 100vw;
+  height: 500px;
+  background: url(./Images/background3.png);
+  background-size: cover;
+  background-position: bottom;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.mission-block {
+  width: 100%;
+  background-color: #0b1723;
+  color: white;
+  font-size: 36px;
+  display: flex;
+  justify-content: center;
+}
+
+.mission-text {
+  width: 80%;
+  padding: 90px 0px;
+}
+
+.clients {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.clients-text {
+  width: 60%;
+  font-size: 42px;
+  padding-top: 80px;
+  margin-bottom: 120px;
+  text-align: center;
+}
+
+.clients-imgs {
+  width: 60%;
+  margin-bottom: 70px;
+}
+
+.clients-imgs div {
+  width: 28%;
+  margin: 0px 2.5%;
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+}
+
+.clients-imgs img {
+  width: 80%;
+}
+
+.showreel {
+  width: 100vw;
+  /* height: 100vh; */
+  background-color: #101010;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.showreel-text {
+  font-size: 64px;
+  width: 89%;
+  padding-top: 50px;
+  color: white;
+}
+
+.showreel-block {
+  width: 100%;
+  /* height: 700px; */
+  margin-top: 60px;
+  padding: 0px 20px;
+  margin-bottom: 60px;
+  box-sizing: border-box;
+}
+
+.showreel-imgs {
+  width: 100%;
+  height: 700px;
+  background-color: #684b4b;
+  border-radius: 5px;
+  position: relative;
+}
+
+.showreel-menu {
+  width: 100%;
+  bottom: 50px;
+  position: absolute;
+  box-sizing: border-box;
+  padding: 0px 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.showreel-back-img {
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  background-position: center !important;
+}
+
+.showreel-menu button {
+  background: none !important;
+}
+
+.arrow-r {
+  transform: rotate(180deg);
+}
+
+.circles {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0px 2%;
+}
+
+.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background-color: white !important;
+  opacity: 0.5;
+  cursor: pointer;
+}
+button.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background-color: white !important;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.image-frame {
+  box-sizing: border-box;
+  /* padding: 50px; */
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  position: absolute;
+}
+
+.image-frame div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.image-frame img {
+  width: 100%;
+}
+
+.cases {
+  background-color: #101010;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cases-list {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 85px;
+}
+
+.cases-item {
+  width: 32%;
+  margin: 0px 0.5%;
+  height: 450px;
+  background-color: #542c93;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.cases-item-logo {
+  width: 140px;
+  height: 35px;
+  border-radius: 100px;
+  background-color: white;
+  margin-left: 25px;
+  margin-top: 25px;
+}
+
+.gradient-block {
+  width: 100%;
+  padding: 15px;
+  padding-top: 30px;
+  box-sizing: border-box;
+  height: 100%;
+}
+
+.gradient {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-sizing: border-box;
+  padding: 0px 10px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 20%,
+    rgba(255, 255, 255, 0.1) 100%
+  );
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.gradient-dark {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-sizing: border-box;
+  padding: 0px 10px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 20%,
+    rgba(0, 0, 0, 0.1) 100%
+  );
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.gradient-text {
+  font-size: 32px;
+}
+
+.gradient-date {
+  font-size: 22px;
+}
+
+.gradient-link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  font-family: 'NexaLight';
+  overflow: hidden;
+  margin-bottom: 25px;
+  padding: 2px 0px;
+}
+.gradient-link img {
+  width: 20px;
+  margin-right: 14px;
+}
+
+.cases-item:nth-child(2) {
+  background-color: #00d841;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 27px;
+}
+.cases-item:nth-child(3) {
+  background-color: #3b7cca;
+}
+.cases-item:nth-child(4) {
+  background-color: #dfbf17;
+}
+.cases-item:nth-child(5) {
+  background-color: #e37623;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 27px;
+}
+.cases-item:nth-child(6) {
+  background-color: #e50075;
+}
+.cases-item:nth-child(7) {
+  background-color: #0e3b8c;
+}
+.cases-item:nth-child(8) {
+  background-color: #3c3c3c;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 27px;
+}
+.cases-item:nth-child(9) {
+  background-color: #f6d636;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 27px;
+}
+.cases-item:nth-child(10) {
+  background-color: #26abe2;
 }
