Added mobile menu and good quality images

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,17 @@ button {
   opacity: 1;
 }
 
-.menu-btns button:nth-child(1) {
+.menuButton {
+  display: none;
+  background: none;
+  height: 55px;
+}
+
+.menuButton img {
+  height: inherit;
+}
+
+.menu-btns button:nth-child(2) {
   background-color: white;
   color: black;
   padding: 0px 25px;
@@ -88,19 +98,27 @@ button {
   margin-right: 12px;
 }
 
-.menu-btns button:nth-child(2) {
+.menu-btns button:nth-child(3)
+/* .menu-btns a:nth-child(1) { */ {
   background-color: #87bba2;
   color: black;
-  padding: 0px 25px;
+  /* padding: 0px 25px; */
   border-radius: 3px;
   /* margin-top: 12px; */
-  padding-top: 15px;
-  padding-bottom: 12px;
+  /* padding-top: 15px;
+  padding-bottom: 12px; */
   margin-right: 30px;
+}
+
+.menu-btns a:nth-child(1) {
+  display: block;
+  padding: 14px 25px;
+  padding-bottom: 11px;
 }
 
 .menu-btns img {
   /* padding-top: 20px; */
+  cursor: pointer;
 }
 
 .block-video {
@@ -138,6 +156,7 @@ button {
 .main-text {
   font-size: 68px;
   margin-bottom: 56px;
+  line-height: 60px;
 }
 
 .med-text {
@@ -145,11 +164,12 @@ button {
   font-size: 45px;
   /* width: 60%; */
   text-align: center;
+  /* line-height: 60px; */
 }
 
 .small-text {
   font-family: 'NexaLight';
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .what-is {
@@ -161,9 +181,9 @@ button {
 .what-is1 {
   width: 100%;
   height: 600px;
-  background: url(./Images/background.png);
+  background: url(./Images/background_new.png);
   background-size: cover;
-  background-position: center;
+  background-position: top;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -182,7 +202,7 @@ button {
 .what-is3 {
   width: 100%;
   height: 700px;
-  background: url(./Images/background2.png);
+  background: url(./Images/background2_new.png);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -224,6 +244,7 @@ button {
   font-size: 64px;
   padding-top: 105px;
   margin-bottom: 85px;
+  line-height: 60px;
 }
 
 .usage {
@@ -273,9 +294,9 @@ button {
 .mission-img {
   width: 100vw;
   height: 500px;
-  background: url(./Images/background3.png);
+  background: url(./Images/background3_new.png);
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -612,6 +633,7 @@ button.circle {
   padding: 0px 60px;
   color: white;
   opacity: 0.8;
+  line-height: 60px;
 }
 
 .brand {
@@ -700,6 +722,18 @@ button.circle {
   font-size: 28px;
   border: none;
   font-family: 'Nexa Bold';
+  border: solid 4px #347958;
+}
+
+.form-l-r input:focus,
+.form-l-r textarea:focus {
+  /* -webkit-box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.4); */
+  -webkit-box-shadow: 0px 10px 13px -7px #000000,
+    0px 3px 22px 5px rgba(155, 155, 155, 0);
+  box-shadow: 0px 10px 13px -7px #000000,
+    0px 3px 22px 5px rgba(155, 155, 155, 0);
+  border: solid 4px #599c7c;
 }
 
 .form-l-r textarea {
@@ -877,7 +911,46 @@ input[type='checkbox']:checked:after {
   justify-content: flex-end;
 }
 
+.mobile-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  display: block;
+  background: black;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 20;
+  background-color: #27513d;
+}
+
+.mobile-menu button {
+  color: black;
+  font-size: 6vw;
+  margin-bottom: 10px;
+}
+
+.menu-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.mobile-btns {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+}
+
+..mobile-btns button {
+  margin-bottom: 20px;
+}
+
 @media screen and (max-width: 1260px) {
+  .mobile-menu {
+    display: flex;
+  }
   .form1-text {
     font-size: 40px;
   }
@@ -888,6 +961,23 @@ input[type='checkbox']:checked:after {
   }
   .gradient-text {
     font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 1157px) {
+  .menuButton {
+    display: block;
+  }
+  .menu {
+    display: none;
+  }
+
+  .menu-btns {
+    width: 100%;
+    margin: 0px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row-reverse;
   }
 }
 
@@ -904,17 +994,6 @@ input[type='checkbox']:checked:after {
   .form-l,
   .form-r {
     width: 100%;
-  }
-  .menu {
-    display: none;
-  }
-
-  .menu-btns {
-    width: 100%;
-    margin: 0px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row-reverse;
   }
 
   .menu-btns button:nth-child(n) {
@@ -955,6 +1034,9 @@ input[type='checkbox']:checked:after {
 }
 
 @media screen and (max-width: 720px) {
+  .pdf-remove {
+    display: none;
+  }
   .usage-option {
     width: 45%;
   }
@@ -1086,7 +1168,10 @@ input[type='checkbox']:checked:after {
   .footer {
     padding: 40px 15px;
   }
-  .menu-btns button:nth-child(n) {
+  /* .menu-btns button:nth-child(n) { */
+  .menu-btns button:nth-child(2),
+  .menu-btns button:nth-child(3),
+  .menu-btns button:nth-child(4) {
     font-size: 3vw;
     padding: 0px 5px;
     padding-top: 15px;
@@ -1101,5 +1186,11 @@ input[type='checkbox']:checked:after {
   .circles {
     width: 70%;
     padding: 0px;
+  }
+
+  .menu-btns a:nth-child(1) {
+    display: block;
+    padding: 0px 10px;
+    padding-bottom: initial;
   }
 }
