--- a/src/App.css
+++ b/src/App.css
@@ -410,7 +410,7 @@ video {
   width: 60%;
   margin-bottom: 70px;
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 .clients-imgs div {
@@ -1216,6 +1216,77 @@ input[type='checkbox']:checked:after {
   width: 66px;
 }
 
+.startup-info-container {
+  width: calc(100% - 10%);
+  padding: 24px 5%;
+  position: absolute;
+  /* height: 600px; */
+  z-index: 9;
+  top: 70px;
+}
+
+.startup-info {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  padding: 56px 50px;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.s-text p:nth-child(1) {
+  font-size: 48px;
+  /* line-height: 120px; */
+  font-weight: 700;
+  font-family: 'NexaBold';
+  margin-bottom: 22px;
+}
+
+.s-text p:nth-child(2) {
+  font-size: 22px;
+  line-height: 26px;
+  font-family: 'NexaLight';
+  margin-bottom: 33px;
+}
+
+.s-top {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.s-top img {
+  max-width: 140px;
+  width: auto;
+  height: auto;
+  margin-top: 36px;
+  margin-right: 36px;
+}
+
+.s-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 55px;
+  border-top: solid;
+  border-top-color: #E8E8E8;
+  border-top-width: 1px;
+}
+
+.s-bottom img {
+  width: auto;
+  max-width: 20%;
+  max-height: 100px;
+  height: auto;
+}
+
+.cross-icon {
+  width: 24px;
+  float: right;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1260px) {
   .mobile-menu {
     display: flex;
@@ -1324,6 +1395,10 @@ input[type='checkbox']:checked:after {
   .form1 {
     padding: 100px 0px;
   }
+  .s-top  {
+    flex-direction: column;
+  }
+  
 }
 
 @media screen and (max-width: 720px) {
@@ -1586,6 +1661,16 @@ input[type='checkbox']:checked:after {
     height: 47px;
     width: 24vw;
     margin-right: 10px !important;
+  }
+
+  .s-bottom {
+    flex-direction: column;
+  }
+
+  .s-bottom img {
+    max-width: 70%;
+    max-height: 140px;
+    margin-bottom: 60px;
   }
 }
 
